# Workshop-Assignment

workshop-assignemnt/: .gitignore  AGENTS.md  PRD.md  package-lock.json  package.json  tailwind.config.js
workshop-assignemnt/.agents/plans/: password-manager.md
workshop-assignemnt/src/: App.tsx  index.css
workshop-assignemnt/src-tauri/: Cargo.toml  tauri.conf.json
workshop-assignemnt/src-tauri/capabilities/: default.json
workshop-assignemnt/src-tauri/src/: commands.rs  crypto.rs  db.rs  lib.rs  main.rs  models.rs
workshop-assignemnt/src/components/: AddPasswordModal.tsx  Header.tsx  PasswordCard.tsx
workshop-assignemnt/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
