[package]
name = "password-manager"
version = "0.1.0"
description = "A secure desktop password manager"
authors = ["Workshop"]
edition = "2021"

[lib]
name = "password_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "password-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
